--- a/base.css
+++ b/base.css
@@ -5,16 +5,18 @@ body {
 }
 
 body > div {
-	padding: 1em 8em 1em 8em;
+	margin: 1em 8em 1em 8em;
 }
 .box {
-	background: #F5F5F5;
+	background: #F0F0F0;
 	line-height: 1.7em;
+	padding: 1em;
 }
 
 .container {
 	display: flex;
 	background: lightblue;
+	padding: 1em;
 }
 .container > div {
 	padding: 1em;
