--- a/base.css
+++ b/base.css
@@ -20,7 +20,7 @@ body > div {
 	padding: 1em;
 }
 .container > div {
-	padding: 1em;
+	padding: 0.5em 1em 0.5em 1em;
 	background: #F5F5F5;
 	border: 1px solid gray;
 	margin-right: 0.5em;
